--- a/app/.gitignore
+++ b/app/.gitignore
@@ -29,7 +29,9 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env*.local
+# allow the template env (for prod) to be committed
+!.env.example
 
 # vercel
 .vercel
