--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "react-email": "4.2.8",
+    "supabase": "^2.34.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
