--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
     "rate-limiter-flexible": "^7.2.0",
