--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "0.5.1",
     "@react-email/render": "^1.2.1",
     "@supabase/ssr": "^0.6.1",
