--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.22",
