--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.1",
     "@react-email/render": "^1.2.1",
     "@supabase/ssr": "^0.6.1",
@@ -31,6 +35,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.6",
     "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
